Fix DemandeServiceController tests for updated response DTO